--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+* 3.0 - Mon 04 Aug 2014
+  - revert to mechanize branch after sustained issues
+  - backport 2.x commits
+
+* 2.0.2 - Wed 9 Jul 2014
+  - fix authentication after coursera update
+
 * 2.0.1 - Tue 11 Mar 2014
 	- fix mppl behavior
 
